# django-phone-verify

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CHANGELOG.rst  README.md  README.rst  changelog.html  conftest.py  contributing.html  customization.html  genindex.html  getting_started.html  index.html  integration.html  makemigrations.py  objects.inv  pyproject.toml  ruff.toml  runtests.py  search.html  searchindex.js  setup.cfg  setup.py  tox.ini
.doctrees/: changelog.doctree  contributing.doctree  customization.doctree  environment.pickle  getting_started.doctree  index.doctree  integration.doctree
.github/: SECURITY.md
.github/workflows/: build-docs.yml  main.yml
_sources/: changelog.rst.txt  contributing.rst.txt  getting_started.rst.txt
docs/: advanced_examples.rst  api_reference.rst  architecture.rst  conf.py  configuration.rst  contributing.rst  customization.rst  faq.rst  getting_started.rst  how_to_integrate_nexmo.rst  how_to_write_custom_backend.rst  index.rst  integration.rst  requirements.txt  security.rst  troubleshooting.rst  usage.rst
phone_verify/: __init__.py  admin.py  api.py  apps.py  models.py  serializers.py  services.py  urls.py
phone_verify/backends/: __init__.py  base.py  kavenegar.py  nexmo.py  smsir.py  test.py  twilio.py
phone_verify/base/: response.py
phone_verify/docs/: api_endpoints.md  api_endpoints.rst  how_to_integrate.rst
phone_verify/migrations/: 0001_initial.py  0002_auto_20190817_1753.py  0002_smsverification_is_verified.py  0003_smsverification_failed_attempts.py
phone_verify/tests/: conftest.py  factories.py  test_api.py  test_settings.py
requirements/: common.txt  development.txt  testing.txt
tests/: __init__.py  factories.py  fixtures.py  test_api.py  test_backends.py  test_models.py  test_nexmo_backend.py  test_services.py  test_settings.py  test_twilio_backend.py
